package com.anhq.smartalarm.core.model

enum class AlarmGameType {
    MATH_PROBLEM,
    MEMORY_TILES,
    SHAKE_PHONE,
    MEMORY_CARD,
    WORD_PUZZLE,
    NONE
} 