package com.anhq.smartalarm.core.model

enum class DayOfWeek(val label: String) {
    MON("T2"),
    TUE("T3"),
    WED("T4"),
    THU("T5"),
    FRI("T6"),
    SAT("T7"),
    SUN("CN")
} 