@startuml SmartAlarm

' Enums
enum AlarmGameType {
    MATH_PROBLEM
    MEMORY_TILES
    SHAKE_PHONE
    MEMORY_CARD
    WORD_PUZZLE
    NONE
}

enum DayOfWeek {
    MON
    TUE
    WED
    THU
    FRI
    SAT
    SUN
    +label: String
}

enum GameDifficulty {
    EASY
    MEDIUM
    HARD
}

' Core Models
class Alarm {
    +id: Int
    +hour: Int
    +minute: Int
    +isActive: Boolean
    +isVibrate: Boolean
    +selectedDays: Set<DayOfWeek>
    +label: String
    +gameType: AlarmGameType
    +soundUri: String
    +getRepeatDaysString(): String
}

class Timer {
    +id: Int
    +initialTimeMillis: Long
    +currentInitialTimeMillis: Long
    +remainingTimeMillis: Long
    +isRunning: Boolean
    +isPaused: Boolean
    +endedAt: Long?
    +lastTickTime: Long
}

class SleepData {
    +date: LocalDateTime
    +durationMinutes: Long
    +startTime: Instant
    +endTime: Instant
}

class EnhancedSleepData {
    +date: LocalDateTime
    +durationMinutes: Long
    +startTime: Instant
    +endTime: Instant
    +alarmTriggerTime: Instant?
    +userAction: String?
    +timeToAction: Long?
    +snoozeCount: Int
}

' Database Entities
class AlarmEntity {
    +id: Int
    +hour: Int
    +minute: Int
    +isActive: Boolean
    +isVibrate: Boolean
    +selectedDays: Set<DayOfWeek>
    +label: String
    +gameType: AlarmGameType
    +soundUri: String
}

class TimerEntity {
    +id: Int
    +initialTimeMillis: Long
    +currentInitialTimeMillis: Long
    +remainingTimeMillis: Long
    +lastTickTime: Long
    +isRunning: Boolean
    +isPaused: Boolean
    +endedAt: Long?
}

class AlarmHistoryEntity {
    +id: Int
    +alarmId: Int
    +triggeredAt: Long
    +userAction: String
    +actionTime: Long
    +dayOfWeek: DayOfWeek
}

class AlarmSuggestionEntity {
    +id: Int
    +hour: Int
    +minute: Int
    +dayOfWeek: DayOfWeek
    +confidence: Float
    +lastUpdated: Long
    +suggestedCount: Int
    +acceptedCount: Int
}

class DeviceActivityEntity {
    +id: Int
    +timestamp: Long
    +isActive: Boolean
    +dayOfWeek: Int
}

' Games
abstract class AlarmGame {
    #isCompleted: Boolean
    +type: AlarmGameType
    +title: String
    +description: String
    +onGameComplete: () -> Unit
    +isGameCompleted(): Boolean
    +{abstract} reset()
    #completeGame()
}

class MathProblemGame {
    -difficulty: GameDifficulty
    -firstNumber: Int
    -secondNumber: Int
    -operation: MathOperation
    -correctAnswer: Int
    +getProblem(): String
    +checkAnswer(answer: Int): Boolean
}

class MemoryTilesGame {
    -difficulty: GameDifficulty
    -gridSize: Int
    -sequenceLength: Int
    -sequence: List<Int>
    -playerSequence: List<Int>
    +onSequenceShow: (List<Int>) -> Unit
    +onSequenceComplete: () -> Unit
    +startNewGame()
}

class ShakePhoneGame {
    -difficulty: GameDifficulty
    -sensorManager: SensorManager
    -accelerometer: Sensor
    -shakeThreshold: Float
    -requiredShakes: Int
    +onShake: (Int, Int) -> Unit
    +startListening()
    +stopListening()
}

class MemoryCardGame {
    -difficulty: GameDifficulty
    -gridSize: Int
    -cards: List<Card>
    -matchedPairs: Int
    +onCardFlip: (Int) -> Unit
    +onPairMatched: () -> Unit
    +flipCard(position: Int): Boolean
}

class WordPuzzleGame {
    -difficulty: GameDifficulty
    -currentWord: String
    -scrambledWord: String
    -attemptsLeft: Int
    +getCurrentScrambledWord(): String
    +checkAnswer(answer: String): Boolean
    +getHint(): String
}

' Factory
class AlarmGameFactory {
    {static} +createGame(type: AlarmGameType, context: Context, difficulty: GameDifficulty): AlarmGame
}

' Relationships
AlarmGame <|-- MathProblemGame
AlarmGame <|-- MemoryTilesGame
AlarmGame <|-- ShakePhoneGame
AlarmGame <|-- MemoryCardGame
AlarmGame <|-- WordPuzzleGame

Alarm --> "1" AlarmGameType
Alarm --> "*" DayOfWeek

AlarmEntity --> "1" AlarmGameType
AlarmEntity --> "*" DayOfWeek

AlarmHistoryEntity --> "1" DayOfWeek
AlarmHistoryEntity --> "1" AlarmEntity

AlarmSuggestionEntity --> "1" DayOfWeek

AlarmGameFactory ..> AlarmGame
AlarmGameFactory ..> AlarmGameType
AlarmGameFactory ..> GameDifficulty

@enduml 